# Python-server

./: .gitignore  QTServer.py  css_style_qwidget.css  pyqt_tutorial.py  qtwebsocket.py  readme.md  server_output.txt  setup_env.spec
Client/: qtwebsocket.py
Save_data/: Save.json
Server/: Equations.py  GameServer.py  QTServer.py
Shared/: Graph.py  __init__.py  game.py  pyproject.toml  signals.py
Shared/Shared.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Test_files/: Client.py  TEST.py  graph_test.py  neoServer.py  pyqt_classes.py  testServer.py
Visualization/: Graph.py
pybuild/: requirements.txt  setup_env.py
rules/: Client.py  GameServer.py  Server.py  game.py  pyqt_classes.py  qtwebsocket.py  style.css  testServer.py
