    [build-system]
    requires = ["setuptools>=61.0"]
    build-backend = "setuptools.build_meta"

    [project]
    name = "Shared"
    version = "0.1.0"
    authors = [
      { name="Your Name", email="your.email@example.com" },
    ]
    description = "A short description of your package."
    
    requires-python = ">=3.7"
    classifiers = [
        "Programming Language :: Python :: 3",
        
        "Operating System :: OS Independent",
    ]
    dependencies = [
        
    ]