[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Shared"
version = "0.1.0"
authors = [
  { name="Peter Gordon", email="peter.c.gordon@gmail.com" },
]
description = "Adds functionality that is shared among the entire project"

requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    
    "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools]
py-modules = ["game", "Graph"]
